1.14 / <not released yet>

 - Fix: JSON output syntax during first day of newly created databases
   (pull request by Stefan Merettig)
 - Add optional mode parameter to --json and --xml for limiting the output
   to only selected information


1.13 / 18-Jan-2015

 - Fix: getgroup() test in Debian GNU/kFreeBSD (patch by Felix Geyer)
 - Fix: struct if_data usage after freeifaddrs() call in BSD
 - Dynamic unit selection in hourly output instead of being fixed to KiB
 - New options in image output (vnstati)
     * -nl / --nolegend for hiding the rx/tx legend
     * --altdate for using alternative date and time text location
     * --headertext for using custom text string in image header section
 - Add legend to hourly output image
 - Add option for content alignment and page background color to vnstat.cgi
 - Document keyword value ranges in configuration file man page
 - Import Makefile improvements from OpenBSD
   (pull requests by Jasper Lievisse Adriaanse)
 - Automatic interface bandwidth detection, BandwidthDetection in config,
   default fallback value MaxBandwidth changed from 100 to 1000
 - JSON output (--json), vnstat-json.cgi and vnstat-json.php examples
   provided in the 'examples' directory
 - Drop support for over 10 year old database formats (versions 1.0 - 1.2)


1.12 / 30-Aug-2014

 - Fix: Memory allocation when zero interfaces are available, also lo needed
   to be missing in order to trigger this leak
 - Fix: Rebuild total indexing (thanks to William Epp for reporting this)
 - Fix: Some error situations could leave database file open until the end
   of command execution
 - Fix: Live traffic meter occasionally showing higher minimum than average
   in end statistics (Debian Bug #687812)
 - Fix: Setting locale when none is specified in config (Debian Bug #606397)
 - Fix: Cppcheck findings (may fix Debian Bug #692330)
 - Improve traffic meter output accuracy
 - Add tests and debug compilation target